fixing free ticket spacing

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -3520,6 +3520,7 @@ section.block.block-views.block-views-event-page-blocks-block {
 	@media screen and (min-width: $large_screen_start_width){
 		display: inline;
     	float: left;
+		padding-top: 0px;
 	}
 }
 span.views-label.views-label-addtoany-link {
